# no-matter

./: .prettierignore  .prettierrc  README.md  biome.json  eslint.config.js  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  vite.config.js
src/: colors.css  common.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/window_decorations/: macos.rs  mod.rs
src/lib/blocks/channel-link/: Channel.svelte  ChannelLink.svelte  Direct.svelte  Group.svelte  index.ts
src/lib/blocks/sidebar/: Sidebar.svelte
src/lib/blocks/user-profile/: UserProfile.svelte  index.ts
src/lib/models/: index.ts
src/lib/models/auth/: auth.api.ts  auth.model.ts  index.ts  login-form.model.ts
src/lib/models/channels/: channels.api.ts  channels.helpers.ts  channels.model.ts  index.ts  types.ts
src/lib/models/provider/: index.ts  provider.model.ts
src/lib/models/team/: index.ts  team.api.ts  team.model.ts
src/lib/models/user/: user.model.ts
src/lib/models/users/: index.ts  users.helpers.ts  users.model.ts
src/lib/shared/components/avatar/: Avatar.svelte  index.ts
src/lib/shared/components/button/: Button.svelte
src/lib/shared/components/card/: Card.svelte
src/lib/shared/directives/: clickoutside.ts
src/lib/shared/helpers/: completer.ts  load-auth-image.ts  number-formatter.ts  store.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/app/: +layout.svelte  +page.svelte
src/routes/app/settings/: +page.svelte
src/routes/login/: +page.svelte
(+24 files in other folders)
